force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/fields/mcdm_15__CustomDataJson__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__CustomDataJson__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <label>Custom Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>