force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/fields/mcdm_15__ExternalJourneyId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ExternalJourneyId__c</fullName>
    <label>External Journey Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>