force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/fields/mcdm_15__LinkedBusinessUnitId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__LinkedBusinessUnitId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Business Unit Id</label>
    <referenceTo>mcdm_15__LinkedBusinessUnit__c</referenceTo>
    <relationshipLabel>SubmissionSendSettings</relationshipLabel>
    <relationshipName>SubmissionSendSettings</relationshipName>
    <type>Lookup</type>
</CustomField>