force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/fields/mcdm_15__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__RelatedRecordId__c</fullName>
    <label>Related Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>