force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/fields/mcdm_15__RelatedRecordType__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__RelatedRecordType__c</fullName>
    <label>Related Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>