force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/fields/mcdm_15__SendFrom__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SendFrom__c</fullName>
    <label>Send From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>